# Autonomous-Mobile-Robot

amr_ws/src/four_wheeler_odom/: CMakeLists.txt  package.xml
amr_ws/src/four_wheeler_odom/nodes/: odom_four_wheel.py  odom_node.py  odometry_class.py  simple_publisher.py
ros_arduino/: back_pwm_controll_automatic_addition.ino  both_encoder_rpm_calculate_with_ros.ino  cmd_val_twist_msgs.ino  cmd_vel_twist_for_odom.ino  data_type_chane_and_imu_publish.ino  encoder_position_to_velocity_for_two_motor.ino  encodr_position_to_velocity.ino  imu_data_publish_from_vector.ino  imu_vector_read.ino  odometry_back_wheel.ino  odometry_front_wheel.ino  odometry_pwm_controll.ino  odometry_pwm_controll_variable_test.ino  only_pwm_control.ino  pwm_controll_automatic_addition.ino  pwm_subscribe_and_rpm_publish.ino  read_all_data_from_imu.ino  two_different_pwm_control.ino
src/bumperbot_controller/: package.xml
src/bumperbot_controller/launch/: controller.launch
src/bumperbot_description/: package.xml
src/bumperbot_description/launch/: assignment.launch  display.launch  display1.launch  imu_demo.launch  two_wheel_robot.launch
src/bumperbot_description/rviz/: assignment.rviz  display.rviz  modify_diff_robot.rviz  plane_model.rviz  two_wheel.rviz
src/bumperbot_examples/: CMakeLists.txt  package.xml
src/bumperbot_examples/config/: simple_configuration.yaml
src/bumperbot_examples/include/amr_config/: amr_odom.hpp
src/bumperbot_examples/nodes/: bumperbot_odom_node.py  imu_node.py  simple_publisher.py  simple_subscriber.py  tf_broadcaster_imu.py  tf_examples_node.py
src/bumperbot_examples/src/: amr_odom.cpp  arduino_motor_control.cpp
src/bumperbot_examples/src/bumperbot_examples/: bumperbot_odom.py  tf_examples.py
(+7 files in other folders)
